background-size: fixed on iOS!!

--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,8 @@ h2:before,
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
+  object-fit: cover;
+
   display: flex;
   justify-content: center;
 }
@@ -572,6 +574,7 @@ nav li a.photo::before {
 }
 #visuals .intro-section {
   background-image: url(/img/jpg/2207910.jpg);
+  min-height: 100%;
 }
 #visuals .social-icons {
   text-align: center;
@@ -626,6 +629,7 @@ nav li a.about::before {
 }
 #about .intro-section {
   background-image: url(/img/gif/about.gif);
+  min-height: 100%;
 }
 #about .partner-logos {
   margin: 0;
@@ -756,6 +760,8 @@ nav li a.about::before {
 }
 #kolding-expo .intro-section {
   background-image: url(/img/jpg/IMG_0922.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 #kolding-expo h2 {
   margin-bottom: 0;
